--- a/android/plant_tracker/app/src/main/res/values-night/themes.xml
+++ b/android/plant_tracker/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.PlantTracker" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Customize your dark theme here. -->
+        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="android:statusBarColor">
+            @color/green
+        </item>
     </style>
-
-    <style name="Theme.PlantTracker" parent="Base.Theme.PlantTracker" />
 </resources>
