--- a/android/plant_tracker/app/src/main/res/values/colors.xml
+++ b/android/plant_tracker/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FFF11100</color>
+    <color name="green">#11823B</color>
 </resources>
