--- a/android/plant_tracker/app/src/main/res/layout/plants_listview_layout.xml
+++ b/android/plant_tracker/app/src/main/res/layout/plants_listview_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="#F3F3F3"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/plants_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        android:divider="@null" />
 
-    </ListView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
