--- a/android/plant_tracker/app/src/main/res/layout/custom_appbar.xml
+++ b/android/plant_tracker/app/src/main/res/layout/custom_appbar.xml
@@ -30,9 +30,23 @@
                     android:id="@+id/back_arrow"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginStart="8dp"
-                    android:contentDescription="Go Back"
+                    android:layout_marginStart="16dp"
+                    android:contentDescription="@string/go_back"
                     android:src="@drawable/back_arrow_24"
+                    app:tint="@color/white"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:visibility="gone" />
+
+                <!-- Hamburger Menu Icon -->
+                <ImageView
+                    android:id="@+id/hamburger_menu"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="16dp"
+                    android:contentDescription="@string/menu"
+                    android:src="@drawable/hamburger_menu_24"
                     app:tint="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +57,7 @@
                     android:id="@+id/toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Plant Tracker"
+                    android:text="@string/app_name"
                     android:textColor="@color/white"
                     android:textSize="28sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -54,10 +68,10 @@
                 <!-- More Options Icon -->
                 <ImageView
                     android:id="@+id/more_icon"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginEnd="8dp"
-                    android:contentDescription="More Options"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="@string/more_options"
                     android:src="@drawable/more_options_vert_24"
                     app:tint="@color/white"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -65,9 +79,6 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.appcompat.widget.Toolbar>
-
     </com.google.android.material.appbar.AppBarLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
