Add plants poc, request sending successfully. Continued ui work.

--- a/android/plant_tracker/app/src/main/res/layout/custom_appbar.xml
+++ b/android/plant_tracker/app/src/main/res/layout/custom_appbar.xml
@@ -14,7 +14,7 @@
 
         <!-- Default start inset offsets layout, set to zero -->
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/top_toolbar"
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/green"
