--- a/android/plant_tracker/app/src/main/res/values/colors.xml
+++ b/android/plant_tracker/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#FFF11100</color>
     <color name="green">#11823B</color>
+    <color name="light_green">#AFD1A7</color>
+    <color name="transparent_green">#4D11823B</color>
+
 </resources>
