--- a/android/plant_tracker/app/src/main/res/values/themes.xml
+++ b/android/plant_tracker/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.PlantTracker" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Base.Theme.PlantTracker" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:statusBarColor">@color/green</item>
