continue working on notification and add app icon

--- a/android/plant_tracker/app/src/main/res/layout/plants_listview_layout.xml
+++ b/android/plant_tracker/app/src/main/res/layout/plants_listview_layout.xml
@@ -18,16 +18,28 @@
         android:layout_height="match_parent"
         android:background="#F3F3F3">
 
-        <ListView
-            android:id="@+id/plants_listview"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swiperefresh"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:divider="@null"
-            android:padding="10dp"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <ListView
+                android:id="@+id/plants_listview"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:divider="@null"
+                android:padding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <TextView
             android:id="@+id/plants_empty_message"
