--- a/android/plant_tracker/app/src/main/res/layout/add_plant_activity.xml
+++ b/android/plant_tracker/app/src/main/res/layout/add_plant_activity.xml
@@ -8,7 +8,7 @@
 
     <!-- Include the custom app bar -->
     <include
-        layout="@layout/custom_toolbar"
+        layout="@layout/custom_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
