--- a/android/plant_tracker/app/src/main/res/layout/add_plant_activity.xml
+++ b/android/plant_tracker/app/src/main/res/layout/add_plant_activity.xml
@@ -65,7 +65,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="10dp"
-        android:hint="Select Pi"
+        android:hint="@string/select_pi_hint"
         app:endIconMode="dropdown_menu">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
